@@ -2,4 +2,5 @@ from forkit.tests.models import *
 from forkit.tests.utils import *
 from forkit.tests.diff import *
 from forkit.tests.fork import *
+from forkit.tests.reset import *
 from forkit.tests.signals import *
