@@ -4,24 +4,15 @@ from forkit.models import ForkableModel
 class Tag(ForkableModel):
     name = models.CharField(max_length=30)
 
-    def __unicode__(self):
-        return u'{0}'.format(self.name)
-
 
 class Author(ForkableModel):
     first_name = models.CharField(max_length=30)
     last_name = models.CharField(max_length=30)
 
-    def __unicode__(self):
-        return u'{0} {1}'.format(self.first_name, self.last_name)
-
 
 class Blog(ForkableModel):
     name = models.CharField(max_length=50)
     author = models.OneToOneField(Author)
-
-    def __unicode__(self):
-        return u'{0}'.format(self.name)
 
 
 class Post(ForkableModel):
@@ -32,12 +23,10 @@ class Post(ForkableModel):
     # intentionally left off the related_name attr
     tags = models.ManyToManyField(Tag)
 
-    def __unicode__(self):
-        return u'{0}'.format(self.title)
-
 
 class A(ForkableModel):
     title = models.CharField(max_length=50)
+    d = models.ForeignKey('D', null=True)
 
 
 class B(ForkableModel):
@@ -49,3 +38,6 @@ class C(ForkableModel):
     a = models.ForeignKey(A, null=True)
     b = models.ForeignKey(B, null=True)
 
+
+class D(ForkableModel):
+    title = models.CharField(max_length=50)
